--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,33 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="//fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+
 </head>
 <body>
 
+<nav>
+<%= link_to("Home", pages_index_path)%>
+<%= link_to("Gift Shop", products_path)%>
+<%= link_to("Orders", orders_path)%>
+<%= link_to("Users", users_path)%>
+
+
+
+</nav>
+
+<h1>FOOD FOR THOUGHT</h1>
+                <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+
 <%= yield %>
+<footer>
+
+  <h4>About Me</h4>
+  <p>Food for Thought was inspired by efforts around the world to reduce food wastage and in particular in Australia by OzHarvest.</p>
+</footer>
 
 </body>
 </html>
