--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -1,2 +1,25 @@
 <h1>Donations#index</h1>
 <p>Find me in app/views/donations/index.html.erb</p>
+
+
+
+
+
+
+
+<% @donations.each do |item| %>
+<div class="case1">
+<%= link_to image_tag(item.image), donation_path(item) %>
+<br>
+<br>
+<%= item.donation_name %>
+<br>
+<br>
+<%= item.donation_desc1 %>
+<br>
+<br>
+<%= item.quantity %>
+<br>
+<br>
+</div>
+<%end%>
