--- a/app/views/donations/show.html.erb
+++ b/app/views/donations/show.html.erb
@@ -1,2 +1,19 @@
 <h1>Donations#show</h1>
 <p>Find me in app/views/donations/show.html.erb</p>
+
+
+<%=@donation.donation_name%>
+<br>
+<br>
+<%= image_tag(@donation.image)%>
+<br>
+<br>
+<%=@donation.donation_desc1%>
+<%=@donation.donation_desc2%>
+<br>
+<br>
+<%=@donation.quantity%>
+
+
+<%= link_to("Edit", edit_donation_path(@donation)) %>
+<%= link_to("Delete", donation_path(@donation),method: :delete, data: {confirm: "Are you sure?"}) %>
