--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,8 +15,12 @@
 <%= item.price %>
 <br>
 <br>
+<%= button_to "Buy", items_path(:product_id => item.id), class: 'case3' %>
+
+<br>
 </div>
 <%end%>
 
-
+<div class="case4">
 <%= will_paginate @products %>
+</div>
