--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,2 +1,26 @@
 <h1>Carts#show</h1>
 <p>Find me in app/views/carts/show.html.erb</p>
+
+<p>Cart ID: <%= @cart.id %></p>
+<hr>
+
+<% if @cart.items.length > 0  %>
+  <% @cart.items.each do |item| %>
+  <ul>
+    <div class="case2">
+      <li>Product: <%= item.product.product_name %></li>
+      <li>Price: <%=number_to_currency(item.product.price)%></li>
+      <li>Quantity: <%= item.quantity %></li>
+      <li>Product ID: <%= item.product_id %></li>
+      <!-- <li>Cart ID: <%#= item.cart_id %></li> -->
+      <li>Order ID: <%= item.order_id %></li>
+      <br>
+      </div>
+        <% end %>
+
+        <%= link_to "Empty cart", cart_path(@cart), method: :delete, data: {confirm: "Are you sure you want to empty your cart?"} %>
+
+
+
+
+        <% end %>
