--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,2 +1,14 @@
 <h1>Orders#new</h1>
 <p>Find me in app/views/orders/new.html.erb</p>
+
+<% @cart.items.each do |item| %>
+
+<ul>
+    <li>Product:
+        <%= item.product.product_name %></li>
+    <li>Price:
+        <%= number_to_currency(item.product.price) %></li>
+    <li>Quantity:
+        <%= item.quantity %></li>
+</ul>
+<% end %>
