--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,9 @@
 <br>
 <br>
 <%=number_to_currency(@product.price)%>
-
-
+<br>
+<br>
+<%= button_to "Buy", items_path(:product_id => @product.id), class: 'case3' %>
+<br>
 <%= link_to("Edit", edit_product_path(@product)) %>
 <%= link_to("Delete", product_path(@product),method: :delete, data: {confirm: "Are you sure?"}) %>
