--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -12,3 +12,5 @@
         <%= item.quantity %></li>
 </ul>
 <% end %>
+
+  <%#= link_to "Checkout", orders_path, method: "post", params: {order_id: @cart.id} %>
