--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,5 +1,5 @@
-<h1>Carts#show</h1>
-<p>Find me in app/views/carts/show.html.erb</p>
+<h1>Current Cart</h1>
+
 
 <p>Cart ID: <%= @cart.id %></p>
 <hr>
@@ -12,25 +12,22 @@
       <li>Price: <%=number_to_currency(item.product.price)%></li>
       <li>Quantity: <%= item.quantity %></li>
       <li>Product ID: <%= item.product_id %></li>
-      <!-- <li>Cart ID: <%#= item.cart_id %></li> -->
-      <li>Order ID: <%= item.order_id %></li>
-      <li>Historical Price <%=item.historical_price %></li>
-      <li>Historical Quantity <%=item.historical_quantity %></li>
+      <!--note there is no order id as order has not been created yet - just items in a shopping cart  -->
+      <!-- <li>Historical Price <%=item.historical_price %></li>
+      <li>Historical Quantity <%=item.historical_quantity %></li> -->
 
-      <br>
+
       </div>
         <% end %>
+        <p>Total to Pay:
+            <%= number_to_currency(@cart.subtotal) %></p>
+<br>
+<%= button_to "Continue Shopping", products_path, method: :get, class: 'case3a' %>
 
+<br>
         <%= link_to "Empty cart", cart_path(@cart), method: :delete, data: {confirm: "Are you sure you want to empty your cart?"} %>
 
       <%= link_to "Checkout", new_order_path %>
-      <%#= link_to "Checkout", orders_path, method: "post"  %>
-      <%#= link_to "Checkout", orders_path, method: "post", params: {order_id: item.id} %>
 
-<%#= button_to "Donate", food_orders_path, method: "post", class: 'case3', params: {donation_id: item.id} %>
 
         <% end %>
-
-
-        <p>Subtotal:
-            <%= number_to_currency(@cart.subtotal) %></p>
