--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -13,4 +13,4 @@
 </ul>
 <% end %>
 
-  <%#= link_to "Checkout", orders_path, method: "post", params: {order_id: @cart.id} %>
+  <%= link_to "Checkout", orders_path, method: "post" %>
