--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,49 +1,55 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Foodforthought</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <title>Foodforthought</title>
+        <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+
+        <%= csrf_meta_tags %>
+        <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="//fonts.googleapis.com/css?family=Lato" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.js"> -->
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfwBh_sgWvE5zu7WcpzF9ejGOkHSrpPtE&callback=initMap" async defer></script>
 
-</head>
-<body>
+        <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+    </head>
+    <body>
 
-<nav>
-<%= link_to("Home", pages_index_path)%>
-<%= link_to("Food Donations", donations_path)%>
+        <nav>
+            <%= link_to("Home", pages_index_path)%>
+            <%= link_to("Food Donations", donations_path)%>
 
-<%= link_to("Gift Shop", products_path)%>
-<%= link_to("Orders", orders_path)%>
-<%= link_to("Users", users_path)%>
+            <%= link_to("Gift Shop", products_path)%>
+            <%= link_to("Orders", orders_path)%>
+            <%= link_to("Users", users_path)%>
+            <%= link_to("Contact Us", pages_location_path)%>
+            <%= link_to("Reports", pages_stats_path)%>
+            <% unless @current_user.present? %>
+            <%= link_to("Login", login_path()) %>
+            <%= link_to("SignUp", new_user_path()) %>
+            <%else %>
+            <%= link_to("Edit your profile", edit_user_path(@current_user.id)) %>
+            <%= link_to("Log out #{@current_user.first_name} #{@current_user.last_name}", logout_path(), :method => :delete) %>
 
-<% unless @current_user.present? %>
-  <%= link_to("Login", login_path()) %>
-  <%= link_to("SignUp", new_user_path()) %>
-  <%else %>
-  <%= link_to("Edit your profile", edit_user_path(@current_user.id)) %>
-  <%= link_to("Log out #{@current_user.first_name} #{@current_user.last_name}", logout_path(), :method => :delete) %>
+            You are logged in as
+            <%= ("#{@current_user.first_name} #{@current_user.last_name}") %>
+            <% end %>
 
-  You are logged in as <%= ("#{@current_user.first_name} #{@current_user.last_name}") %>
-  <% end %>
+        </nav>
+
+        <h1>FOOD FOR THOUGHT</h1>
 
 
 
-</nav>
+        <%= yield %>
+        <footer>
 
-<h1>FOOD FOR THOUGHT</h1>
-                <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+            <h4>About Me</h4>
+            <p>Food for Thought was inspired by efforts around the world to reduce food wastage and in particular in Australia by OzHarvest.</p>
+        </footer>
 
-<%= yield %>
-<footer>
-
-  <h4>About Me</h4>
-  <p>Food for Thought was inspired by efforts around the world to reduce food wastage and in particular in Australia by OzHarvest.</p>
-</footer>
-
-</body>
+    </body>
 </html>
