--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,17 +1,21 @@
-<h1>Orders#index</h1>
-<p>Find me in app/views/orders/index.html.erb</p>
+<h1>Orders</h1>
+
 
 <% @orders.each do |order| %>
     <ul>
-      <li>Name: <%= order.name %></li>
-      <li>Address: <%= order.address1 %></li>
+      <!-- <li>Name: <%#= order.name %></li>
+      <li>Address: <%#= order.address1 %></li> -->
       <li>Status: <%= order.status %></li>
       <li>Items: </li>
-      <ul>
         <% order.items.each do |item| %>
-        <li>Product: <%= item.product.product_name %>; Quantity: <%= item.quantity %></li>
+            <li>Product:
+                <%= item.product.product_name %>;
+                Quantity:
+                <%= item.quantity %>;
+            Product Price: <%= item.product.price %>
+            <li>Total: <%=item.subtotal %></li>
+            </li>
         <% end %>
-
       </ul>
     </ul>
 <% end %>
