--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -19,3 +19,14 @@
       </ul>
     </ul>
 <% end %>
+
+
+
+<button id="order_display">Load Orders</button>
+<button id="stop_live_orders">Stop Live Orders</button>
+
+
+<div class="clear_display">
+    <p class="order_display">test</p>
+    <div id="order_display"></div>
+</div>
