--- a/app/views/pages/stats.html.erb
+++ b/app/views/pages/stats.html.erb
@@ -7,6 +7,15 @@
   <title>Document</title>
 </head>
 <body>
-  <canvas id="myChart" width="400" height="400"></canvas>
+
+  <div class="row">
+    <div class="col-7">
+<canvas id="myChart" width="200" height="200"></canvas>
+
+    </div>
+
+
+  </div>
+
 </body>
 </html>
