--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,20 +23,28 @@
             <%= link_to("Food Donations", donations_path)%>
 
             <%= link_to("Gift Shop", products_path)%>
-            <%= link_to("Orders", orders_path)%>
-            <%= link_to("Users", users_path)%>
-            <%= link_to("Contact Us", pages_location_path)%>
-            <%= link_to("Reports", pages_stats_path)%>
+
+                <%= link_to("Contact Us", pages_location_path)%>
+
+
+
             <% unless @current_user.present? %>
             <%= link_to("Login", login_path()) %>
-            <%= link_to("SignUp", new_user_path()) %>
+            <%= link_to("Food Donor SignUp", new_user_path()) %>
             <%else %>
+            <%= link_to("Users", users_path)%>
+            <%= link_to("Reports", pages_stats_path)%>
+            <%= link_to("Orders", orders_path)%>
             <%= link_to("Edit your profile", edit_user_path(@current_user.id)) %>
             <%= link_to("Log out #{@current_user.first_name} #{@current_user.last_name}", logout_path(), :method => :delete) %>
 
             You are logged in as
             <%= ("#{@current_user.first_name} #{@current_user.last_name}") %>
             <% end %>
+
+
+
+
 
         </nav>
 
