--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+<h1>Gift Shop</h1>
+<p></p>
 
 <% @products.each do |item| %>
 <div class="case1">
