--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,5 @@
-<h1>Products#show</h1>
-<p>Find me in app/views/products/show.html.erb</p>
+<h1>Gift Shop</h1>
+<p></p>
 
 <%=@product.product_name%>
 <br>
@@ -16,5 +16,12 @@
 <br>
 <%= button_to "Buy", items_path(:product_id => @product.id), class: 'case3' %>
 <br>
+<% if @current_user.present?%>
+<% if @current_user.admin.to_s == "true"  %>
+<!--why is there an error if not logged in  -->
 <%= link_to("Edit", edit_product_path(@product)) %>
 <%= link_to("Delete", product_path(@product),method: :delete, data: {confirm: "Are you sure?"}) %>
+<%else%>
+<%""%>
+<%end%>
+<%end%>
