--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<h1>What Does Food Wastage Mean?</h1>
+<p></p>
 
 
 
@@ -9,11 +9,11 @@
         <%= image_tag("compost.jpg", :class => "autoplay") %>
     </div>
     <div>
-        <%= image_tag("homeless-man.jpg", :class => "autoplay") %>
+        <%= image_tag("compost.jpg", :class => "autoplay") %>
     </div>
     <div>
-        <%= image_tag("ugly-veggies.png", :class => "autoplay") %>
+        <%= image_tag("compost.jpg", :class => "autoplay") %>
     </div>
-
+    
 
 </div>
