--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,42 +1,42 @@
 <%=form_for @product do |f| %>
 
 <div class="row">
-<div class="col-3 left">
+<div class="col-5 right">
 <span>Product name</span>
 </div>
-<div class="col-9 left" >
+<div class="col-5" >
 <%= f.text_field :product_name, :required => true %>
 </div>
 </div>
 <div class="row">
-<div class="col-3 left">
+<div class="col-5 right">
     <span>Product description</span>
 </div>
-<div class="col-9 left" >
+<div class="col-5" >
 <%= f.text_area :product_desc1, :required => true %>
 </div>
 </div>
 <div class="row">
-<div class="col-3 left">
+<div class="col-5 right">
     <span>Product description 2</span>
 </div>
-<div class="col-9 left" >
+<div class="col-5" >
 <%= f.text_area :product_desc2, :required => true %>
 </div>
 </div>
 <div class="row">
-<div class="col-3 left">
+<div class="col-5 right">
     <span>Price</span>
 </div>
-<div class="col-9 left" >
+<div class="col-5" >
 <%= f.text_area :price, :required => true %>
 </div>
 </div>
 <div class="row">
-<div class="col-3 left">
+<div class="col-5 right">
     <span>Image</span>
 </div>
-<div class="col-9 left" >
+<div class="col-5" >
 <%= f.text_area :image, :required => true %>
 </div>
 </div>
