--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,15 +26,24 @@
 
                 <%= link_to("Contact Us", pages_location_path)%>
 
+                <% if @current_user.present?%>
+                <% if @current_user.admin.to_s == "true"  %>
+                <!--why is there an error if not logged in  -->
+                <%= link_to("Users", users_path)%>
+                <%= link_to("Reports", pages_stats_path)%>
+                <%= link_to("Orders", orders_path)%>
+                <%else%>
+                <%""%>
+                <%end%>
+                <%end%>
+
 
 
             <% unless @current_user.present? %>
             <%= link_to("Login", login_path()) %>
             <%= link_to("Food Donor SignUp", new_user_path()) %>
             <%else %>
-            <%= link_to("Users", users_path)%>
-            <%= link_to("Reports", pages_stats_path)%>
-            <%= link_to("Orders", orders_path)%>
+
             <%= link_to("Edit your profile", edit_user_path(@current_user.id)) %>
             <%= link_to("Log out #{@current_user.first_name} #{@current_user.last_name}", logout_path(), :method => :delete) %>
 
@@ -43,13 +52,9 @@
             <% end %>
 
 
-
-
-
         </nav>
 
         <h1>FOOD FOR THOUGHT</h1>
-
 
 
         <%= yield %>
