--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,11 +1,11 @@
 <h1>Orders</h1>
 
-
+<!--
 <% @orders.each do |order| %>
     <ul>
       <!-- <li>Name: <%#= order.name %></li>
       <li>Address: <%#= order.address1 %></li> -->
-      <li>Status: <%= order.status %></li>
+      <!-- <li>Status: <%#= order.status %></li>
       <li>Items: </li>
         <% order.items.each do |item| %>
             <li>Product:
@@ -18,7 +18,7 @@
         <% end %>
       </ul>
     </ul>
-<% end %>
+<% end %> -->
 
 
 
