--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,11 +9,12 @@
         <%= image_tag("compost.jpg", :class => "autoplay") %>
     </div>
     <div>
-        <%= image_tag("compost.jpg", :class => "autoplay") %>
+        <%= image_tag("homeless-man.jpg", :class => "autoplay") %>
     </div>
     <div>
-        <%= image_tag("compost.jpg", :class => "autoplay") %>
+        <%= image_tag("ugly-veggies.png", :class => "autoplay") %>
     </div>
-    
+
+
 
 </div>
