--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -1,5 +1,10 @@
-<h1>Donations#new</h1>
-<p>Find me in app/views/donations/new.html.erb</p>
+<h1>User Profile</h1>
 
+
+<div class="row">
+  <div class="col-5">
 
 <%= render "form" %>
+
+</div>
+</div>
