--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -14,10 +14,25 @@
 
 <div>
 
+<br>
+<br>
 <p>
 Delivery Instructions: Please drop off at our location marked with the "Red Flag" - our warehouse is opposite OzHarvest in Alexandria.
-
+<br>
 </p>
+<div class="row">
+<div class="col-6">
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, facilis quasi consectetur voluptatibus quam iste! Suscipit numquam velit excepturi iure fugiat neque dicta accusamus qui quo, vel! Nobis, suscipit, in.
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur iusto natus quo, id mollitia. Laboriosam numquam aliquid vel, perferendis harum delectus, ad non dicta quam perspiciatis voluptate modi a corporis.
+</div>
+<div class="col-6">
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, labore mollitia itaque debitis! A corporis illo eius, sunt dolorem autem alias accusantium atque, molestiae libero nisi quam dolores, eveniet amet.
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti rerum deserunt rem excepturi dolore, nesciunt quae magni! Nisi nobis molestias, natus pariatur aliquam quos eligendi doloribus? Autem necessitatibus placeat deserunt?
+</div>
+
+</div>
+
+
 </div>
 
 </body>
