--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -22,8 +22,8 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-8 right">
-        <%= submit_tag "Login", :class => "submit_format" %>
+    <div class="col-7 right">
+        <%= submit_tag "Login", :class => "case3a" %>
     </div>
 </div>
 
