--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,11 @@
   *** (C) ZACH COLE 2016
   **/
 
+  body.pages.index {
+     background-image: image-url("potato.jpg");
+
+     background-size: cover;
+  }
 
  /* UNIVERSAL */
 
@@ -30,7 +35,7 @@
    padding: 0;
 
    font-size: 100%;
-   background-color: lightslategray;
+   background-color: #E8E5D9;
    text-align: center;
 
  }
@@ -184,19 +189,15 @@
    display: inline-block;
  }
 
-body.pages.index {
-   background-image: url("potato.jpg");
-   background-size: cover;
-}
-
 .slick-slider {
-   width: 420px;
+   width: 430px;
+   height: 220px;
    margin: 0 auto;
 }
 
 .slick-slide {
 margin: 0 auto;
-  width: 420px;
+  width: 430px;
   max-width: 75%;
 text-align: center;
 }
@@ -204,6 +205,7 @@ text-align: center;
 
 img{
 height: 160px;
+border-radius: 5px;
 }
 
 .case1 {
@@ -222,11 +224,11 @@ display: inline-block;
 
 .case3{
    width: 60px;
-   background-color: #e3a797;
+   background-color: #EDF5F5;
 }
 .case3a{
    width: 120px;
-   background-color: #e3a797;
+   background-color: #EDF5F5;
 }
 
 .case4{
@@ -236,7 +238,11 @@ display: inline-block;
 
 }
 
-
+.case6{
+  width: 400px;
+  text-align: center;
+  display: inline;
+}
 input, textarea {
    border-radius: 6px;
    text-align: center;
@@ -253,7 +259,7 @@ p, li {
 }
 
 a {
-  color: #A5A5A5;
+  color: #2C3539;
   padding: 30px;
   text-align: justify;
 }
