--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -23,3 +23,11 @@
 <%end%>
 </div>
 <%end%>
+
+<div>
+<p class="case6">
+Your donations are extremely valuable to the community and are much appreciated.  We will endeavour to pick up your donation within an hour of the specified pick up time.  The food will used to provide nourishing meals to the many refuges, hospices and charities we support.
+
+</p>
+
+</div>
