--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
         <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
     </head>
-    <body>
+    <body class="<%= params[:controller] %> <%= params[:action] %>">
 
         <nav>
             <%= link_to("Home", pages_index_path)%>
@@ -58,6 +58,8 @@
 
 
         <%= yield %>
+
+        
         <footer>
 
             <h4>About Me</h4>
