--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -14,7 +14,19 @@
     <div>
         <%= image_tag("ugly-veggies.png", :class => "autoplay") %>
     </div>
+    </div>
 
-
-
+<br>
+<br>
+<br>
+<div class="row">
+<div class="col-4">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, reiciendis, alias officia quidem doloremque itaque enim quis atque numquam iste at quas voluptates incidunt cupiditate. Nulla libero eaque neque temporibus.
+</div>
+<div class="col-4">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt eligendi ratione odio hic totam natus veritatis, incidunt ipsam asperiores error ab officia cupiditate quas. Rem atque iusto doloribus ab doloremque.
+</div>
+    <div class="col-4">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi minus ratione, aperiam dolore repellendus atque iusto amet dolorem dolor repellat sit animi maxime odio harum quia magnam commodi itaque corrupti.
+    </div>
 </div>
