--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,82 +3,82 @@
 <%=form_for @user do |f| %>
 
 <div class="row">
-    <div class="col-3 left">
+    <div class="col-5 right">
 
         <span>First name</span>
     </div>
-    <div class="col-9 left">
+    <div class="col-7 left">
         <%= f.text_field :first_name, :required => true %>
     </div>
 </div>
 <div class="row">
-    <div class="col-3 left">
+    <div class="col-5 right">
         <span>Surname</span>
     </div>
-    <div class="col-9 left">
+    <div class="col-7 left">
         <%= f.text_field :last_name, :required => true %>
     </div>
 </div>
 <div class="row">
-    <div class="col-3 left">
+    <div class="col-5 right">
         <span>Email</span>
     </div>
-    <div class="col-9 left">
+    <div class="col-7 left">
         <%= f.email_field :email, :required => true %>
     </div>
 </div>
 <div class="row">
-    <div class="col-3 left">
+    <div class="col-5 right">
         <span>Address Line 1</span>
     </div>
-    <div class="col-9 left">
+    <div class="col-7 left">
         <%= f.text_field :address1, :required => true %>
     </div>
 </div>
 <div class="row">
-    <div class="col-3 left">
+    <div class="col-5 right">
         <span>Address Line 2</span>
     </div>
-    <div class="col-9 left">
+    <div class="col-7 left">
         <%= f.text_field :address2, :required => true %>
     </div>
 </div>
 <div class="row">
-    <div class="col-3 left">
+    <div class="col-5 right">
         <span>Postcode</span>
     </div>
-    <div class="col-9 left">
+    <div class="col-7 left">
         <%= f.number_field :postcode, :required => true %>
     </div>
 </div>
 <div class="row">
-    <div class="col-3 left">
+    <div class="col-5 right">
         <span>State</span>
     </div>
-    <div class="col-9 left">
+    <div class="col-7 left">
         <%= f.text_field :state %>
     </div>
 </div>
 <div class="row">
-    <div class="col-3 left">
+    <div class="col-5 right">
         <span>Password</span>
     </div>
-    <div class="col-9 left">
+    <div class="col-7 left">
         <%= f.password_field :password, :required => true%>
     </div>
 </div>
 <div class="row">
-    <div class="col-3 left">
+    <div class="col-5 right">
         <span>Password Confirmation</span>
     </div>
-    <div class="col-9 left">
+    <div class="col-7 left">
         <%= f.password_field :password_confirmation, :required => true%>
 
 
 <br>
 <br>
 
-<%= f.submit "Submit", :class=> "submit_format"%>
+<%= f.submit "Submit", :class=> "case3a"%>
 <br>
 <% end %>
 
