--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,7 +4,7 @@
 <%=@product.product_name%>
 <br>
 <br>
-<%= image_tag(@product.image)%>
+<%= image_tag(@product.image, :class => "prod2")%>
 <br>
 <br>
 <%=@product.product_desc1%>
