--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,55 +1,29 @@
-
-
-
-
-
-
-
-
-
-
-<%=form_for @product do |f| %>
+<%=form_for @order do |f| %>
 
 <div class="row">
-<div class="col-3 left">
-<span>Product name</span>
+<div class="col-5 right">
+<span>Name</span>
 </div>
-<div class="col-9 left" >
-<%= f.text_field :product_name, :required => true %>
+<div class="col-7 left" >
+<%= f.text_field :name, :required => true %>
 </div>
 </div>
 <div class="row">
-<div class="col-3 left">
-    <span>Product description</span>
+<div class="col-5 right">
+    <span>Address</span>
 </div>
-<div class="col-9 left" >
-<%= f.text_area :product_desc1, :required => true %>
-</div>
-</div>
-<div class="row">
-<div class="col-3 left">
-    <span>Product description 2</span>
-</div>
-<div class="col-9 left" >
-<%= f.text_area :product_desc2, :required => true %>
+<div class="col-7 left" >
+<%= f.text_field :address1, :required => true %>
 </div>
 </div>
 <div class="row">
-<div class="col-3 left">
-    <span>Price</span>
+<div class="col-5 right">
+    <span>Order Status</span>
 </div>
-<div class="col-9 left" >
-<%= f.text_area :price, :required => true %>
-</div>
-</div>
-<div class="row">
-<div class="col-3 left">
-    <span>Image</span>
-</div>
-<div class="col-9 left" >
-<%= f.text_area :image, :required => true %>
+<div class="col-7 left" >
+<%= f.select :status,["in progress","Paid","Shipped"] %>
 </div>
 </div>
 
-        <%= f.submit "Submit", :class=> "submit_format"%>
+        <%= f.submit "Submit", :class=> "case3a"%>
         <% end %>
