--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -4,7 +4,7 @@
 <div class="col-5 right">
 <span>Product name</span>
 </div>
-<div class="col-5" >
+<div class="col-7 left" >
 <%= f.text_field :product_name, :required => true %>
 </div>
 </div>
@@ -12,7 +12,7 @@
 <div class="col-5 right">
     <span>Product description</span>
 </div>
-<div class="col-5" >
+<div class="col-7 left" >
 <%= f.text_area :product_desc1, :required => true %>
 </div>
 </div>
@@ -20,7 +20,7 @@
 <div class="col-5 right">
     <span>Product description 2</span>
 </div>
-<div class="col-5" >
+<div class="col-7 left" >
 <%= f.text_area :product_desc2, :required => true %>
 </div>
 </div>
@@ -28,7 +28,7 @@
 <div class="col-5 right">
     <span>Price</span>
 </div>
-<div class="col-5" >
+<div class="col-7 left" >
 <%= f.text_area :price, :required => true %>
 </div>
 </div>
@@ -36,10 +36,10 @@
 <div class="col-5 right">
     <span>Image</span>
 </div>
-<div class="col-5" >
+<div class="col-7 left" >
 <%= f.text_area :image, :required => true %>
 </div>
 </div>
 
-        <%= f.submit "Submit", :class=> "submit_format"%>
+        <%= f.submit "Submit", :class=> "case3a"%>
         <% end %>
