--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,7 +3,7 @@
 
 <% @products.each do |item| %>
 <div class="case1">
-<%= link_to image_tag(item.image), product_path(item) %>
+<%= link_to image_tag(item.image, :class => "prod1"), product_path(item) %>
 <br>
 <br>
 <%= item.product_name %>
