--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -22,14 +22,15 @@
 <div class="row">
     <div class="testing">
 <div class="col-4">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, reiciendis, alias officia quidem doloremque itaque enim quis atque numquam iste at quas voluptates incidunt cupiditate. Nulla libero eaque neque temporibus.
+Over 40 per cent of food produced is lost in the chain from farmer to final consumer.  We are dedicated to reducing waste and feeding the needy.  Please contact us to donate and contribute to the food recycling community.
 </div>
 
 <div class="col-4">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt eligendi ratione odio hic totam natus veritatis, incidunt ipsam asperiores error ab officia cupiditate quas. Rem atque iusto doloribus ab doloremque.
+"Food for Thought is one of the most worthwhile charities I have worked with.  Coles is proud to be associated with the distribution of surplus food.  Please do your bit to help this worthwile cause."
+John Smith, CEO of Regional Distribution.
 </div>
     <div class="col-4">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi minus ratione, aperiam dolore repellendus atque iusto amet dolorem dolor repellat sit animi maxime odio harum quia magnam commodi itaque corrupti.
+"We can all contribute to solving the problem of food waste.  Food for Thought is dedicated and provides one of the most useful outlets for the distribution of surplus needs to the homeless and other refuges"
     </div>
     </div>
 </div>
