--- a/app/views/donations/edit.html.erb
+++ b/app/views/donations/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Donations#edit</h1>
-<p>Find me in app/views/donations/edit.html.erb</p>
+<h1>Edit Your Donation</h1>
+
 
 <%= @donation.donation_name %>
 
