--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,6 @@
   **/
 
   body.pages.index {
-    //  background-image: image-url("potato.jpg");
      background-image: image-url("wheat.jpg");
      background-size: cover;
   }
@@ -33,7 +32,6 @@
    font-family: "Lato";
    margin: 0 auto;
    padding: 0;
-
    font-size: 100%;
    background-color: #E8E5D9;
    text-align: center;
@@ -196,11 +194,11 @@
 }
 
 .slick-slide {
-margin: 0 auto;
+  margin: 0 auto;
   height: 267px;
   width: 400px;
   max-width: 75%;
-text-align: center;
+  text-align: center;
 }
 
 .testing {
@@ -214,8 +212,8 @@ text-align: center;
 }
 
 img{
-height: 180px;
-border-radius: 5px;
+  height: 180px;
+  border-radius: 5px;
 }
 
 .prod1:hover {
@@ -226,13 +224,12 @@ border-radius: 5px;
 
 }
 .case1 {
-
-text-align: center;
-max-width: 360px;
-padding: 20px;
-max-height: 300px;
-margin: auto;
-display: inline-block;
+  text-align: center;
+  max-width: 240px;
+  padding: 10px;
+  max-height: 300px;
+  margin: auto;
+  display: inline-block;
 }
 
 .case2{
@@ -249,9 +246,9 @@ display: inline-block;
 }
 
 .case4{
-   width: 250px;
+   
    font-size: 12px;
-   text-align: left;
+
 
 }
 
@@ -259,6 +256,10 @@ display: inline-block;
   width: 400px;
   text-align: center;
   display: inline;
+}
+
+.case8{
+  height: 40px;
 }
 input, textarea {
    border-radius: 6px;
