--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -6,14 +6,22 @@
 <div class="autoplay">
 
     <div>
-        <%= image_tag("compost.jpg", :class => "autoplay") %>
+        <%= image_tag("compost3.jpg", :class => "autoplay") %>
     </div>
+    <div>
+        <%= image_tag("compost4.jpg", :class => "autoplay") %>
+    </div>
+
     <div>
         <%= image_tag("homeless-man.jpg", :class => "autoplay") %>
     </div>
     <div>
-        <%= image_tag("ugly-veggies.png", :class => "autoplay") %>
+        <%= image_tag("ugly-veggies1.png", :class => "autoplay") %>
     </div>
+    <div>
+        <%= image_tag("ugly-veggies2.png", :class => "autoplay") %>
+    </div>
+
     </div>
 
 <br>
