--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -203,8 +203,8 @@ margin: 0 auto;
 .testing {
   color: #2C3539;
   background-color: white;
-  height: 120px;
-  width: 80%;
+  height: 160px;
+  width: 944px;
   margin: 0 auto;
   border-radius: 20px;
   margin-top: 80px;
@@ -331,6 +331,49 @@ form.button_to, {
     margin: 0 auto;
     border-radius: 20px;
     margin-top: 80px;
+  }
+
+  input, textarea {
+     border-radius: 6px;
+     text-align: center;
+     width: 180px;
+
+  }
+
+div.col-3, div.col-5.right, div.col-7.left {
+  width: 160px;
+}
+
+
+div.col-7.right {
+  width: 350px;
+}
+
+  .slick-slider {
+    max-width: 236px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .testing {
+    color: #2C3539;
+    background-color: white;
+    height: 460px;
+    width: 80%;
+    margin: 0 auto;
+    border-radius: 20px;
+    margin-top: 80px;
+  }
+
+  input, textarea {
+     border-radius: 6px;
+     text-align: center;
+     width: 160px;
+
+  }
+
+  div.col-3, div.col-5.right, div.col-7.left {
+    width: 100px;
   }
 
   .slick-slider {
