--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,73 +6,81 @@
 
         <%= csrf_meta_tags %>
         <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <link href="//fonts.googleapis.com/css?family=Lato" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.js"> -->
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfwBh_sgWvE5zu7WcpzF9ejGOkHSrpPtE&callback=initMap" async defer></script>
 
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfwBh_sgWvE5zu7WcpzF9ejGOkHSrpPtE&callback=initMap" async defer></script>
         <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
     </head>
+
     <body class="<%= params[:controller] %> <%= params[:action] %>">
 
         <nav>
-            <%= link_to("Home", pages_index_path)%>
-            <%= link_to("Food Donations", donations_path)%>
-
-            <%= link_to("Gift Shop", products_path)%>
-
-                <%= link_to("Contact Us", pages_location_path)%>
-
-                <% if @current_user.present?%>
-                <% if @current_user.admin.to_s == "true"  %>
-                <!--why is there an error if not logged in  -->
-                    <div class="dropdown">
-  <button class="dropbtn">Admin</button>
-  <div class="dropdown-content">
-    <a href="../users">Users</a>
-    <a href="../pages/stats">Reports</a>
-    <a href="../orders">Orders</a>
-  </div>
-</div>
-
-                <%#= link_to("Users", users_path)%>
-                <%#= link_to("Reports", pages_stats_path)%>
-                <%#= link_to("Orders", orders_path)%>
-                <%else%>
-                <%""%>
-                <%end%>
-                <%end%>
-
+            <div class="stylenav">
 
 
             <% unless @current_user.present? %>
             <%= link_to("Login", login_path()) %>
-            <%= link_to("Food Donor SignUp", new_user_path()) %>
             <%else %>
-
+            You are logged in as
+            <%= ("#{@current_user.first_name} #{@current_user.last_name}") %>
             <%= link_to("Edit your profile", edit_user_path(@current_user.id)) %>
             <%= link_to("Log out #{@current_user.first_name} #{@current_user.last_name}", logout_path(), :method => :delete) %>
 
-            You are logged in as
-            <%= ("#{@current_user.first_name} #{@current_user.last_name}") %>
             <% end %>
 
+            <% if @current_user.present?%>
+            <% if @current_user.admin.to_s == "true"  %>
+            <!--why is there an error if not logged in  -->
+            <div class="dropdown">
+                <button class="dropbtn">Admin</button>
+                <div class="dropdown-content">
+                    <a href="../users">Users</a>
+                    <a href="../pages/stats">Reports</a>
+                    <a href="../orders">Orders</a>
+                </div>
+            </div>
+            <%else%>
+            <%""%>
+            <%end%>
+            <%end%>
+                </div>
+            <br>
+            <ul class="navBar" id="myNavBar">
+                <li>
+                    <%= link_to("Home", pages_index_path) %>
+                </li>
+                <li>
+                    <%= link_to("Food Donations", donations_path) %>
+                </li>
+                <li>
+                    <%= link_to("Gift Shop", products_path) %>
+                </li>
+                <li>
+                    <%= link_to("Contact Us", pages_location_path) %>
+                </li>
+                <li>
+                    <%= link_to("Donor Sign Up", new_user_path) %>
+                </li>
+                <li class="icon">
+                    <a href="javascript:void(0);" onclick="navBarFunction()">&#9776;</a>
+                </li>
+                <br>
+                <br>
+            </ul>
 
-
-
+            <br>
+            <br>
         </nav>
 
-        <h1>FOOD FOR THOUGHT</h1>
-
+        <h1 class="">FOOD FOR THOUGHT</h1>
 
         <%= yield %>
 
-
         <footer>
-
 
             <p>Food for Thought was inspired by efforts around the world to reduce food wastage and in particular in Australia by OzHarvest.</p>
         </footer>
