--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
         <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link href="//fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+        <link href="//fonts.googleapis.com/css?family=Lato|Luckiest+Guy" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 
@@ -76,7 +76,7 @@
             <br>
         </nav>
 
-        <h1 class="">FOOD FOR THOUGHT</h1>
+        <h1 class="charity-title">FOOD FOR THOUGHT</h1>
 
         <%= yield %>
 
