--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -202,7 +202,7 @@ margin: 0 auto;
 
 .testing {
   color: #2C3539;
-  background-color: white;
+  background-color: #E8E5D9;
   height: 160px;
   width: 944px;
   margin: 0 auto;
@@ -309,7 +309,7 @@ form.button_to, {
 @media only screen and (max-width: 1024px) {
   .testing {
     color: #2C3539;
-    background-color: white;
+    background-color: #E8E5D9;
     height: 200px;
     width: 80%;
     margin: 0 auto;
@@ -325,7 +325,7 @@ form.button_to, {
 @media only screen and (max-width: 800px) {
   .testing {
     color: #2C3539;
-    background-color: white;
+    background-color: #E8E5D9;
     height: 360px;
     width: 80%;
     margin: 0 auto;
@@ -357,7 +357,7 @@ div.col-7.right {
 @media only screen and (max-width: 400px) {
   .testing {
     color: #2C3539;
-    background-color: white;
+    background-color: #E8E5D9;
     height: 460px;
     width: 80%;
     margin: 0 auto;
@@ -437,6 +437,10 @@ ul.navBar li a {
 
 ul.navBar li.icon {display: none;}
 
+ul#myNavBar {
+  background-color: white;
+}
+
 @media screen and (max-width:680px) {
   ul.navBar li:not(:first-child) {display: none;}
   ul.navBar li.icon {
@@ -473,4 +477,9 @@ h1 {
 .stylenav {
   float: right;
   padding-right: 35px;
+}
+
+.charity-title {
+  font-family: "Luckiest Guy";
+  font-size: 55px;
 }
