--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<h1>What Does Food Wastage Mean?</h1>
+
 <p></p>
 
 
@@ -34,8 +34,9 @@ Over 40 per cent of food produced is lost in the chain from farmer to final cons
 </div>
 
 <div class="col-4">
-"Food for Thought is one of the most worthwhile charities I have worked with.  Coles is proud to be associated with the distribution of surplus food.  Please do your bit to help this worthwile cause."
-John Smith, CEO of Regional Distribution.
+"Food for Thought is one of the most worthwhile charities I have worked with.  Our supermarket chain is proud to be associated with the distribution of surplus food.  Please do your bit to help this worthwile cause."
+<p>John Smith, Regional Distribution.
+</p>
 </div>
     <div class="col-4">
 "We can all contribute to solving the problem of food waste.  Food for Thought is dedicated and provides one of the most useful outlets for the distribution of surplus needs to the homeless and other refuges"
