--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -396,8 +396,7 @@ div.col-7.right {
 }
 
 .dropdown-content a:hover {
-  background-color: #f1f1f1;
-}
+  background-color: #f1f1f1;}
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -463,7 +462,6 @@ ul#myNavBar {
     max-width: 100px;
   }
 }
-
 
 .stylenav {
   float: right;
